# newton_extension

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
minsim.physics.xewton/: premake5.lua
minsim.physics.xewton/config/: extension.toml
minsim.physics.xewton/docs/: CHANGELOG.md  Overview.md  README.md  api.rst
minsim.physics.xewton/minsim/physics/xewton/: __init__.py  impl  tests
minsim.physics.xewton/minsim/physics/xewton/impl/: __init__.py  extension.py  xewton_config.py  xewton_stage.py  xsolver.py
minsim.physics.xewton/python/src/: solver_config.py  xewton_register.py  xewton_stage.py  xsolver.py
scripts/: test_xewton_cube.py
